--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,18 @@
 version: 1.0.{build}
 pull_requests:
   do_not_increment_build_number: true
-image: Visual Studio 2019 Preview
+image: Visual Studio 2019
 configuration: Release
 platform: x64
-clone_folder: c:\projects
+clone_folder: c:\projects-aeuyt9bin5u4tc9y
 install:
-  - cd c:\projects
+  - cd c:\projects-aeuyt9bin5u4tc9y
   - git submodule update --init --recursive
 build_script:
 - cmd: >-
-    nuget restore c:\projects\build\build.sln
+    nuget restore c:\projects-aeuyt9bin5u4tc9y\build\build.sln
 
-    msbuild c:\projects\build\build.sln /p:Configuration="Release" /verbosity:quiet
+    msbuild c:\projects-aeuyt9bin5u4tc9y\build\build.sln /p:Configuration="Release" /verbosity:quiet
 artifacts:
 - path: '*.nupkg'
   name: Stefan Dyulgerov
